[package]
authors = ["Marcus Ball <marcus@marcusball.me>"]
name = "life-tracker"
version = "0.1.0"

[dependencies]
base64 = "0.7.0"
chrono = {version = "0.4.0", features = ["serde"]}
dotenv = "0.10.1"
env_logger = "0.4.3"
lazy_static = "0.2.8"
log = "0.3.8"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
error-chain = "0.11"

[dependencies.diesel]
features = [
    "postgres",
    "uuid",
    "chrono",
]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "json"]
version = "0.3.3"
